# crm-system

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
crm_system/advertising/: forms.py  models.py  urls.py  views.py
crm_system/advertising/migrations/: 0001_initial.py
crm_system/clients/: forms.py  models.py  serializers.py  urls.py  views.py
crm_system/clients/migrations/: 0001_initial.py  0002_alter_potentialclient_email.py  0003_potentialclient_unique_field_combination.py  0004_potentialclient_notes.py  0005_potentialclient_next_interaction_date.py  0006_alter_potentialclient_next_interaction_date.py  0007_potentialclient_is_active.py  0008_rename_potentialclient_client.py  0009_alter_client_options_and_more.py  0010_alter_client_advertising_company.py
crm_system/contracts/: forms.py  models.py  pdf_creator.py  urls.py  views.py
crm_system/contracts/migrations/: 0001_initial.py  0002_alter_contract_documentation.py  0003_contract_active_client.py  0004_rename_active_client_contract_client.py  0005_alter_contract_client.py  0006_alter_contract_options.py  0007_alter_contract_client.py  0008_alter_contract_client.py  0009_alter_contract_documentation.py  0010_alter_contract_documentation.py
crm_system/crm_system/: settings.py  urls.py
crm_system/services/: forms.py  models.py  urls.py  views.py
crm_system/services/migrations/: 0001_initial.py  0002_alter_service_price.py  0003_alter_service_price.py  0004_alter_service_options.py
crm_system/users/: urls.py  views.py
(+43 files in other folders)
